--- a/website/styles/components/_nav.scss
+++ b/website/styles/components/_nav.scss
@@ -2,7 +2,7 @@
 
 .io-nav {
   font-size: var(--fs-300);
-  font-weight: 500;
+  font-weight: 400;
 
   &__list {
     display: flex;
